# Depression-Detector

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
app/: gradio_app.py
app/static/css/: dashboard.css
app/static/js/: dashboard.js
benchmarks/: fps_benchmark.py  unseen_video_test.py
configs/: base.yaml  compact_av_extract.yaml  demo.yaml  dvlog_train.yaml  live_dvlog.yaml  live_mixed_visual.yaml  mixed_visual_train.yaml  research.yaml  space.yaml
presentation/: README.md  demo_video_checklist.md  slides.md
scripts/: build_daic_feature_manifest.py  build_depvidmood_manifest.py  build_dvlog_feature_manifest.py  build_lmvd_feature_manifest.py  check_real_data_ready.py  download_emonet_weights.py  evaluate.py  export_space_assets.py  extract_features.py  merge_feature_manifests.py  run_demo.py  run_depvidmood_pipeline.py  run_mixed_training_pipeline.py  setup_kaggle.ps1  setup_kaggle.sh  train.py  verify_environment.py
src/mmds/: __init__.py
src/mmds/config/: __init__.py  load.py
src/mmds/data/: __init__.py  collate.py  feature_manifest.py  schema.py  synthetic.py
src/mmds/data/adapters/: __init__.py  base.py  daic_woz.py  dvlog.py  edaic.py  generic_video_folder.py
src/mmds/evaluation/: cli.py  evaluator.py  metrics.py  plots.py
src/mmds/feature_extraction/: __init__.py  emonet_extractor.py  entropy_bdd.py  mediapipe_holistic_full.py
src/mmds/features/: __init__.py  compact_audio.py  compact_visual.py  emonet.py  offline.py  registry.py  windowing.py
src/mmds/features/extractors/: __init__.py  base.py  mediapipe_backend.py  mediapipe_dvlog_backend.py  mediapipe_full_backend.py  openface_backend.py  simple_backend.py
src/mmds/features/quality/: __init__.py  bdd.py  entropy_bdd.py  signals.py
src/mmds/inference/: __init__.py  mc_dropout.py  service.py  viz.py
src/mmds/models/: __init__.py  mmds_model.py  outputs.py
src/mmds/models/encoders/: __init__.py  modality_encoder.py
src/mmds/models/fusion/: __init__.py  concat_transformer.py  face_body.py  fe_module.py  hybrid_fusion.py  perceiver.py  positional.py
src/mmds/models/heads/: __init__.py  bdd.py  binary.py  ordinal.py  regression.py
src/mmds/training/: cli.py  data.py  losses.py  split.py  trainer.py
src/mmds/ui/: cli.py  gradio_app.py  styles.py
src/mmds/utils/: device.py  seed.py
tests/: conftest.py  test_adapters.py  test_app_import.py  test_collate_masking.py  test_compact_audio.py  test_config_aliases.py  test_depvidmood_manifest.py  test_hybrid_model.py  test_inference_service.py  test_model_forward.py  test_multitask_loss_masking.py  test_split.py
